# store

./: .editorconfig  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml  requirements.txt
accounts/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
accounts/migrations/: 0001_initial.py
accounts/templates/accounts/: profile.html
accounts/templates/registration/: confirm_email.html  invalid_verify.html  login.html  my_password_reset_form.html  register.html  verify_email.html
config/: context_processor.py  urls.py
config/settings/: base.py  dev.py  prod.py
config/static/css/: iconsfont.css  owl.carousel.min.css  style.css
config/static/css/sass/: style.scss
config/static/css/sass/base/: _base.scss  _responsive.scss  _variables.scss
config/static/icon-fonts/: icons.eot
config/static/js/: script.js
store/: admin.py  apps.py  models.py  singnals.py  urls.py  utils.py  views.py
store/migrations/: 0001_initial.py
store/templates/store/: contact.html  index.html  product_detail.html  products_by_category.html  products_by_search.html
store/templates/store/include/: _category_list.html  _paginator.html  _paginator_search.html  _products.html  _slider_new_products.html  _slider_related_products.html  _tag_list.html
store/templatetags/: menu.py  products.py  tags.py
telebot/: admin.py  apps.py  forms.py  models.py  send_message.py
telebot/migrations/: 0001_initial.py
templates/: 404.html  base.html
templates/admin/: base_site.html
templates/include/: _footer.html  _header.html
(+11 files in other folders)
